working on getting the zoomed view to move around with the mouse

--- a/client/style.css
+++ b/client/style.css
@@ -18,6 +18,7 @@
 
 .product-details{
   display: inline-block;
+  max-width: 400px;
 }
 
 .product-thumbnail{
@@ -36,7 +37,7 @@
   display: inline-block;
   height: 557px;
   width: 557px;
-  transition: all 0.3s;
+  /* transition: all 0.3s; */
   max-width: 557px;
   box-sizing: border-box;
   margin: 0;
