--- a/client/style.css
+++ b/client/style.css
@@ -37,11 +37,10 @@
   display: inline-block;
   height: 557px;
   width: 557px;
-  /* transition: all 0.3s; */
-  max-width: 557px;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 .color{
