--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,4 @@
 body{
-  /* font-family: 'Yantramanav', sans-serif; */
   font-family: 'Trebuchet MS', sans-serif;
 }
 
@@ -36,6 +35,8 @@ body{
   text-transform: uppercase;
   color:#ccc;
   font-size: 12px;
+  line-height: 20px;
+  align-content: flex-start;
 }
 
 .product-thumbnail{
@@ -45,6 +46,8 @@ body{
 
 .product-price{
   font-size: 24px;
+  text-align: left;
+  display: block;
 }
 
 .color-label{
@@ -87,7 +90,14 @@ body{
   transform:scale(1.8);
 }
 
+.product-actions{
+  display: inline-block;
+  text-align: left;
+  clear: both;
+}
+
 .button{
+  float: right;
   color: red;
   text-transform: uppercase;
   font-size: 12px;
@@ -110,6 +120,13 @@ body{
 
 .materials{
   display: none;
+}
+
+.reviews_img{
+  display: block;
+  float: left;
+  width: 186px;
+  text-align: left;
 }
 
 .reviewbg{
